<resources>
    <string name="app_name">birdcol</string>
    <string name="birdcol">BirdCol</string>
    <string name="conoce_las_aves_de_colombia_por_regiones">Conoce las aves de Colombia por regiones</string>
    <string name="todo">TODO</string>
    <string name="p_bton">TODO</string>
    <string name="i_bton">TODO</string>
    <string name="a_bton">TODO</string>
    <string name="an_bton">TODO</string>
    <string name="pa_bton">TODO</string>
    <string name="subtitle_insular">TODO</string>
    <string name="insular_sub">TODO</string>
    <string name="subInsular">TODO</string>
    <string name="subAmazonia">TODO</string>
    <string name="subAndina">TODO</string>
    <string name="subCaribe">TODO</string>
    <string name="subOrinoquia">TODO</string>
    <string name="subPacifica">TODO</string>
    <string name="reproducir_sound1">Reproducir</string>
    <string name="aguila_harpia">Aguila Harpia</string>
    <string name="info">La arpía mayor, ​ águila arpía, águila harpía o simplemente harpía es una especie de ave accipitriforme de la familia Accipitridae que vive en la zona neotropical.</string>
    <string name="im">TODO</string>
    <string name="chiribiquite_esmeralda">Chiribiquite Esmeralda</string>
    <string name="infoEsmeralda">La esmeralda del Chiribiquete​, también esmeralda de Chiribiquete o esmeralda Chiribiquete, es una especie de ave de la familia Trochilidae</string>
    <string name="colibri_topacio">Colibri Topacio</string>
    <string name="infoTopacio">El topacio candela colicanelo, topacio candela cola canela, topacio candela de cola canela, topacio carmesi, o colibrí topacio​ es una especie de colibrí de la familia Trochilidae.</string>
    <string name="lechuzon_anteojos">TODO</string>
    <string name="lechuzon_de_anteojos">Lechuzon de anteojos</string>
    <string name="img_trepador">TODO</string>
    <string name="trepador_colorado">Trepador Colorado</string>
    <string name="infoLechuzon">El lechuzón de anteojos​ es una especie de ave estrigiforme perteneciente al género Pulsatrix que integra la familia Strigidae.</string>
    <string name="infoTepradorC">El trepatroncos variable​ es una especie de ave paseriforme de la familia Furnariidae, subfamilia Dendrocolaptinae, perteneciente al género Dendrocolaptes.</string>
    <string name="alondra">Alondra</string>
    <string name="infoAlondra">El ave alondra es principalmente diurna, lo que explica la elección de la palabra para las personas que tienden a irse a dormir a media tarde, y levantarse alrededor del momento del amanecer, si no antes.</string>
    <string name="colibri">Colibri</string>
    <string name="infoColibri">Colibri es un género de aves apodiformes pertenecientes a la subfamilia de los troquilinos. El género agrupa a cinco especies con una distribución principalmente neotropical.</string>
    <string name="grulla">Grulla</string>
    <string name="infoGrulla">Los gruidos son una familia de aves gruiformes conocidas vulgarmente como grullas. Son aves de lugares abiertos. Se desplazan dando zancadas con sus largas patas y recogen semillas e insectos con su largo pico.</string>
    <string name="pava">Pava</string>
    <string name="infoPava">La pava moñuda o guan, también conocida como pava cojolita, ​ pava crestada, catita serrana, cojolite, congona, ajolite y chonche, es una especie de la familia Cracidae.</string>
    <string name="perdiz">Perdiz</string>
    <string name="infoPerdiz">Las perdices son aves no migratorias de la familia Phasianidae nativas de Europa, Asia, África y Medio Oriente.</string>
    <string name="gallina_morada">Gallina Morada</string>
    <string name="infoGallinam">es una especie de ave gruiforme de la familia de los rálidos que habita en pantanos y zonas húmedas de América. Esta especie se clasificó antes en el género Porphyrula, pero más tarde este género se determinó que era sinónimo de Porphyrio. En 2016 se corrigió el específico de martinicus a martinica. ponen en monte.</string>
    <string name="garza_tricolor">Garza Tricolor</string>
    <string name="infoGarza">La garceta tricolor o garceta de Luisiana es una especie de ave pelecaniforme de la familia Ardeidae.​​ Se encuentra en los ríos y humedales de los estados sureños de Estados Unidos y por toda Centroamérica, hasta Brasil y Perú.</string>
    <string name="gavilan_pico_de_gancho">Gavilan Pico de Gancho</string>
    <string name="infoGavilan">El milano picogarfio, ​​ es una especie de ave rapaz de la familia Accipitridae, que también incluye muchas otras rapaces diurnas, como milanos, águilas y aguiluchos.</string>
    <string name="pelicano_cafe">Pelicano Cafe</string>
    <string name="infoPelicano">El pelícano pardo es una especie de ave pelecaniforme de la familia Pelecanidae que se encuentra en América desde el sur de los Estados Unidos hasta la Amazonía.</string>
    <string name="playero_blanco">Playero Blanco</string>
    <string name="infoPlayero">El correlimos tridáctilo o playerito blanco es una especie de ave caradriforme de la familia Scolopacidae. Es una ave costera de distribución prácticamente cosmopolita.​</string>
    <string name="aguila_pescadora">Aguila Pescadora</string>
    <string name="infoAguila">El águila pescadora​, también conocida como halieto, guincho​ o gavilán pescador, ​ es una especie de ave accipitriforme de la familia Pandionidae.​</string>
    <string name="infoMartin">El martín pescador común​ o alción es una especie de ave coraciiforme de la familia Alcedinidae, que habita en lagos y ríos de Europa, África, América y Asia.</string>
    <string name="martin_pescador">Martin Pescador</string>
    <string name="pellar_playero">Pellar Playero</string>
    <string name="infoPellar">Es un ave pequeña bastante llamativa de coloración principalmente blanca y negra que se encuentra al oriente de los Andes. Su nombre Vanellus deriva del latín y significa avefría. El término cayanus se utilizó en los principios de la ornitología para referirse a un ave de dudosa procedencia, probablemente del Amazonas.</string>
    <string name="cotua">Cotua</string>
    <string name="infoCotua">El cormorán neotropical, también conocido como biguá, mbiguá, cormorán, cormorán negro, ​ cuervo de mar, ​ yeco, pato yeco o marshelous, pato cuervo​ o patillo, ​ es una especie de ave suliforme de la familia Phalacrocoracidae.</string>
    <string name="paloma_morada">Paloma Morada</string>
    <string name="infoPaloma">La paloma morada​ o paloma piquirroja​ es una especie de ave columbiforme de la familia Columbidae. Es nativo de Belice, Costa Rica, El Salvador, Guatemala, Honduras, México, Nicaragua y los Estados Unidos.</string>
    <string name="cotinga">Cotinga</string>
    <string name="infoCotinga">Cotinga es un género de aves paseriformes perteneciente a la familia Cotingidae que agrupa a siete especies nativas de la América tropical</string>
    <string name="guacamayo">Guacamayo</string>
    <string name="infoGuacamato">El guacamayo escarlata​​​, guacamayo rojo o guacamayo bandera es una especie de ave perteneciente a la familia de los psitácidos</string>
    <string name="tucan">Tucan</string>
    <string name="infoTucan">Los ranfástidos, conocidos comúnmente como tucanes, ​​ son una familia de aves piciformes. Es muy amplia, ya que alberga seis géneros y cuarenta y dos especies diferentes de tucanes.</string>
    <string name="gaviotin">gaviotin</string>
    <string name="infoGaviotin">Los charranes o estérnidos son aves marinas pertenecientes a la familia Sternidae. Poseen una distribución global y normalmente se encuentran cerca de mares, ríos y humedales.</string>
    <string name="paujil">Paujil</string>
    <string name="infoPaujil">El paujil colombiano (Crax alberti), también conocido como pavón piquiazul,2​ pavón colombiano, hocco piguiazul, muitú de pico azul y opón, es una especie de ave galliforme de la familia Cracidae endémica del norte de Colombia, desde el piedemonte de la Sierra Nevada de Santa Marta hasta la cuenca baja y media del río Magdalena.</string>
</resources>